--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@databases/split-sql-query": "^1.0.3",
     "@databases/sql": "^3.2.0",
     "@types/jest": "^29.2.2",
+    "@types/node": "^18.11.9",
     "better-sqlite3": "^7.6.2",
     "esbuild": "^0.15.13",
     "esbuild-jest": "^0.5.0",
